--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>2.grocery</title>
+  </head>
+  <body>
+    <section class="section-center">
+      <div class="container">
+        <p class="alert">alert</p>
+        <h1>Grocery Bud</h1>
+        <form id="form1">
+          <input
+            type="text"
+            id="grocery-input"
+            name="grocery-input"
+            placeholder="e.g. eggs"
+          />
+          <button type="submit" value="add" class="submit-btn">Add</button>
+        </form>
+        <ul class="ul">
+          <!-- <li>list item</li> -->
+        </ul>
+        <button class="clear-btn">Clear Items</button>
+      </div>
+    </section>
+    <!-- JS -->
+    <script src="js/script.js"></script>
+  </body>
 </html>
