--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
   <body>
     <section class="section-center">
       <div class="container">
-        <p class="alert">alert</p>
-        <h1>Grocery Bud</h1>
-        <form id="form1">
-          <input
-            type="text"
-            id="grocery-input"
-            name="grocery-input"
-            placeholder="e.g. eggs"
-          />
-          <button type="submit" value="add" class="submit-btn">Add</button>
-        </form>
-        <ul class="ul">
-          <!-- <li>list item</li> -->
-        </ul>
-        <button class="clear-btn">Clear Items</button>
+        <div class="wrapper">
+          <p class="alert display-block success">alert</p>
+          <h1>Grocery Bud</h1>
+          <form id="form1">
+            <input
+              type="text"
+              id="grocery-input"
+              name="grocery-input"
+              placeholder="e.g. eggs"
+            />
+            <button type="submit" value="add" class="submit-btn">Add</button>
+          </form>
+          <ul class="ul">
+            <!-- <li>list item</li> -->
+          </ul>
+          <button class="clear-btn display-block">Clear Items</button>
+        </div>
       </div>
     </section>
     <!-- JS -->
