--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="section-center">
       <div class="container">
         <div class="wrapper">
-          <p class="alert display-block success">alert</p>
+          <p class="alert">alert</p>
           <h1>Grocery Bud</h1>
           <form id="form1">
             <input
@@ -31,7 +31,7 @@
           <ul class="ul">
             <!-- <li>list item</li> -->
           </ul>
-          <button class="clear-btn display-block">Clear Items</button>
+          <button class="clear-btn">Clear Items</button>
         </div>
       </div>
     </section>
