--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="section-center">
       <div class="container">
         <div class="wrapper">
-          <p class="alert">alert</p>
+          <p class="alert"></p>
           <h1>Grocery Bud</h1>
           <form id="form1">
             <input
@@ -29,7 +29,17 @@
             <button type="submit" value="add" class="submit-btn">Add</button>
           </form>
           <ul class="ul">
-            <!-- <li>list item</li> -->
+            <!-- <li class="list-item">
+              list item
+              <div class="buttons">
+                <button class="btn edit-btn">
+                  <i class="fas fa-edit"></i>
+                </button>
+                <button class="btn delete-btn">
+                  <i class="fas fa-trash"></i>
+                </button>
+              </div>
+            </li> -->
           </ul>
           <button class="clear-btn">Clear Items</button>
         </div>
