--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             />
             <button type="submit" value="add" class="submit-btn">Add</button>
           </form>
-          <ul class="ul">
+          <ul class="list">
             <!-- <li class="list-item">
               list item
               <div class="buttons">
