--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                 </button>
               </div>
             </li> -->
+            <!-- <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste
+              asperiores fugit blanditiis odio, quo commodi eius itaque natus,
+              voluptate officia voluptatibus quibusdam cupiditate fuga iure
+              consequuntur, delectus fugiat mollitia. Est quasi placeat maiores
+              iusto quam aliquid porro aut, quos consequuntur debitis ab ipsa
+              non suscipit, blanditiis voluptatibus alias. Nobis, at.
+            </p> -->
           </ul>
           <button class="clear-btn">Clear Items</button>
         </div>
